big refacto / expand pkg
